docs: update auth handlers swagger docs
